--- a/info/dados_gerais.qmd
+++ b/info/dados_gerais.qmd
@@ -6,12 +6,17 @@ format:
     anchor-sections: false
 ---
 
+Esta seção centraliza todas as informações essenciais sobre nosso componente curricular, incluindo horários, avaliações e datas importantes.
+
+
+## Informações
+
 - **Componente curricular:** ESTAT0074 - Inferência I
 - **Carga Horária:** 60 horas (4 créditos)
 - **Unidade Responsável:** Departamento de Estatística e Ciências Atuariais (DECAT)
 - **Docente Responsável:** Prof. Dr. Sadraque E. F. Lucena
 - **Período Letivo:** 2025-2
-- **Plano de Ensino da Disciplina:**  [pdf](/PDFs/plano_de_ensino_inferencia1.pdf){target="_blank"}
+- **Plano de Ensino da Disciplina:**  [**pdf**](/PDFs/plano_de_ensino_inferencia1.pdf){target="_blank"}
 
 *Disciplina obrigatória para os cursos de Estatística e de Ciências Atuariais da Universidade Federal de Sergipe.*
 
