--- a/info/cronograma.qmd
+++ b/info/cronograma.qmd
@@ -9,30 +9,43 @@ format:
 Confira abaixo o cronograma de aulas do semestre, baseado no [calendário acadêmico do período 2025-2](/PDFs/calendario_academico-2025-1-2.pdf){target="_blank"}.
 
 
-| Aula   | Data                        | Assunto Previsto                 |
-|:------:|:----------------------------|:---------------------------------|
-| 1      | Terça, 13 de maio de 2025   | Recepção dos alunos              |
-| 2      | Quinta, 15 de maio de 2025  | Recepção dos alunos              |
-| 3      | Terça, 20 de maio de 2025   | Apresentação da disciplina       |
-| 4      | Quinta, 22 de maio de 2025  | Introdução ao RStudio + GitHub   |
-| 5      | Terça, 27 de maio de 2025   | Introdução ao LaTeX              |
-| 6      | Quinta, 29 de maio de 2025  | Estrutura básico do LaTeX        |
-| 7      | Terça, 03 de junho de 2025  | Ambiente matemático no LaTeX     |
-| 8      | Quinta, 05 de junho de 2025 | Tabelas no LaTeX                 |
-| 9      | Terça, 10 de junho de 2025  | Figuras no LaTeX                 |
-| 10     | Quinta, 12 de junho de 2025 | Bibliografia no LaTeX            |
-| 11     | Quinta, 17 de junho de 2025 | Avaliação 1                      |
-| 12     | Terça, 01 de julho de 2025  | Quarto                           |
-| 13     | Quinta, 03 de julho de 2025 | Geração de Números aleatórios    |
-| 14     | Quinta, 10 de julho de 2025 | Geração de Variáveis Aleatórias Discretas    |
-| 15     | Terça, 15 de julho de 2025 | Geração de Variáveis Aleatórias Contínuas    |
-| 16     | Terça, 17 de julho de 2025 | Geração de Variáveis Aleatórias Contínuas    |
-| 17     | Terça, 22 de julho de 2025 | Geração de Variáveis Aleatórias Contínuas    |
-| 18     | Terça, 24 de julho de 2025 | Geração de um processo de Poisson Homogêneo    |
-| 19     | Terça, 29 de julho de 2025 | Geração de um processo de Poisson Não Homogêneo    |
-| 20     | Terça, 31 de julho de 2025 | Avaliação 2    |
-| 21     | Terça, 05 de agosto de 2025 | O Método de Integração de Monte Carlo    |
-| 22     | Terça, 12 de agosto de 2025 | O Método de Monte Carlo para Estimação    |
-| 23     | Terça, 14 de agosto de 2025 | Método de Reamostragem Bootstrap    |
-| 24     | Terça, 19 de agosto de 2025 | Aplicações do Método Bootstrap    |
-
+| **Data** | **Dia da Semana** | **Aula** | **Assunto Previsto** |
+|:---|:---|:---|:---------------------------|
+| 07/10/25 | Terça | 1 | VI Encontro de Estatística e Ciências Atuariais da UFS |
+| 09/10/25 | Quinta | 2 | Apresentação da disciplina. Revisão das principais distribuições de probabilidade |
+| 14/10/25 | Terça | 3 | Amostras, Estatísticas e Estimadores |
+| 16/10/25 | Quinta | 4 | Viés de um estimador |
+| 21/10/25 | Terça | 5 | Erro quadrático médio de um estimador |
+| 23/10/25 | Quinta | 6 | Estimadores eficientes |
+| 28/10/25 | Terça | 7 | Estatísticas suficientes |
+| 30/10/25 | Quinta | 8 | Critério da fatoração de Neyman |
+| 04/11/25 | Terça | 9 | Família Exponencial |
+| 06/11/25 | Quinta | 10 | Estatística completa e estimador não viesado de variância uniformemente mínima |
+| 11/11/25 | Terça | 11 | Aula de Exercícios |
+| 13/11/25 | Quinta | 12 | Avaliação 1 |
+| 18/11/25 | Terça | 13 | O método dos momentos |
+| 20/11/25 | Quinta | -- | Dia Nacional de Zumbi e da Consciência Negra (feriado nacional) |
+| 25/11/25 | Terça | 14 | XI SEMAC |
+| 27/11/25 | Quinta | 15 | XI SEMAC |
+| 02/12/25 | Terça | 16 | O método dos momentos (continuação) |
+| 04/12/25 | Quinta | 17 | O método da máxima verossimilhança |
+| 09/12/25 | Terça | 18 | Propriedade dos estimadores de máxima verossimilhança |
+| 11/12/25 | Quinta | 19 | O método da máxima verossimilhança: caso multiparamétrico |
+| 16/12/25 | Terça | 20 | Exercícios |
+| 18/12/25 | Quinta | 21 | Avaliação 2 |
+| 23/12/25 | Terça | -- | Recesso acadêmico |
+| 25/12/25 | Quinta | -- | Recesso acadêmico |
+| 30/12/25 | Terça | -- | Recesso acadêmico |
+| 01/01/26 | Quinta | -- | Confraternização Universal (feriado nacional) e Aniversário de São Cristóvão (feriado municipal) |
+| 06/01/26 | Terça | -- | Férias coletivas para docentes |
+| 08/01/26 | Quinta | -- | Férias coletivas para docentes |
+| 13/01/26 | Terça | 22 | Amostras de populações normais |
+| 15/01/26 | Quinta | 23 | O método da quantidade pivotal |
+| 20/01/26 | Terça | 24 | Intervalos para populações normais: o caso de uma única amostra |
+| 22/01/26 | Quinta | 25 | Intervalos para populações normais: duas amostras independentes |
+| 27/01/26 | Terça | 26 | Intervalos para populações normais: duas amostras independentes |
+| 29/01/26 | Quinta | 27 | Intervalos de confiança aproximados |
+| 03/02/26 | Terça | 28 | Exercícios |
+| 05/02/26 | Quinta | 29 | Exercícios |
+| 10/02/26 | Terça | 30 | Avaliação 3 |
+| 12/02/26 | Quinta | 31 | Avaliação Substitutiva |
