--- a/info/dados_gerais.qmd
+++ b/info/dados_gerais.qmd
@@ -16,7 +16,7 @@ Esta seção centraliza todas as informações essenciais sobre nosso componente
 - **Unidade Responsável:** Departamento de Estatística e Ciências Atuariais (DECAT)
 - **Docente Responsável:** Prof. Dr. Sadraque E. F. Lucena
 - **Período Letivo:** 2025-2
-- **Plano de Ensino da Disciplina:**  [**pdf**](/PDFs/plano_de_ensino_inferencia1.pdf){target="_blank"}
+- **Plano de Ensino da Disciplina:**  [**pdf**](/PDFs/plano_de_ensino_Inferencia1.pdf){target="_blank"}
 
 *Disciplina obrigatória para os cursos de Estatística e de Ciências Atuariais da Universidade Federal de Sergipe.*
 
@@ -32,7 +32,19 @@ As aulas ocorrerão nos seguintes horários:
 
 ## Avaliações
 
-A disciplina contará com **3 avaliações** distribuídas ao longo do semestre nas seguintes datas:
+A disciplina terá **3 avaliações** principais ao longo do semestre.
+
+Ao final do período, haverá uma Avaliação Substitutiva, que funciona como uma recuperação e segue duas regras:
+
+- Se você faltou a uma das três provas, poderá fazer a substitutiva para repor essa nota.
+
+- Se você fez todas as provas, mas não atingiu a média para ser aprovado(a), também poderá fazer a substitutiva. Nesse caso, a prova servirá para substituir a sua menor nota.
+
+Atenção: A possibilidade de substituir a menor nota é um recurso exclusivo para quem ainda não alcançou a aprovação. Estudantes já aprovados não poderão realizar a prova para aumentar a média.
+
+Em ambas as situações, o conteúdo da avaliação substitutiva cobre toda a matéria do semestre.
+
+As datas previstas para as avaliações são:
 
 - **Avaliação 1:** 13/11/2025 (quinta)
 - **Avaliação 2:** 18/12/2025 (quinta)
@@ -43,7 +55,7 @@ A disciplina contará com **3 avaliações** distribuídas ao longo do semestre 
 ## Não haverá aula
 
 - **20/11/2025:** Dia Nacional de Zumbi e da Consciência Negra (feriado nacional)
-- **25 e 27/06/2025:** XI SEMAC
+- **25 e 27/06/2025:** XI SEMAC (uspensão das atividades de aula para participação nos eventos da XI SEMAC)
 - **22 a 31/12/2025:** Recesso de final de ano
 - **01/01/2026:** Confraternização Universal (feriado nacional) e Aniversário de São Cristóvão (feriado municipal)
 - **02 a 10/01/2026:** Férias coletivas para docentes
